<resources>
    <string name="app_name">Cov.id</string>
    <string name="takecare">Special Guide For You</string>
    <string name="howto">how to protect yourself and others from COVID19?</string>
    <string name="covid_19">Covid 19</string>
    <string name="prottect_your_self_and_your_fammily_from_covid">Protect yourselves and your family from Covid</string>
    <string name="kasus">Kasus</string>
    <string name="jumlah">jumlah</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="di_rawat">Di Rawat</string>
    <string name="dki_jakarta">DKI Jakarta</string>
    <string name="how_to_protect_yourself_from_covid">How to Protect Yourself From Covid</string>
    <string name="check_it">Check it</string>
    <string name="how_to_protect_yourself_and_others_from_covid">How to Protect Yourself and Others from Covid</string>
    <string name="change">Change</string>
    <string name="jawa_barat">Jawa Barat</string>
    <string name="banten">Banten</string>
    <string name="jawa_tengah">Jawa Tengah</string>
    <string name="daerah_istimewa_yogyakarta">Daerah Istimewa Yogyakarta</string>
    <string name="jawa_timur">Jawa Timur</string>
    <string name="bali">Bali</string>
    <string name="nusa_tenggara_barat">Nusa Tenggara Barat</string>
    <string name="nusa_tenggara_timur">Nusa Tenggara Timur</string>
    <string name="sulawesi_utara">Sulawesi Utara</string>
    <string name="sulawesi_barat">Sulawesi Barat</string>
    <string name="sulawesi_tengah">Sulawesi Tengah</string>
    <string name="sulawesi_tenggara">Sulawesi Tenggara</string>
    <string name="sulawesi_selatan">Sulawesi Selatan</string>
    <string name="gorontalo">Gorontalo</string>
    <string name="naggroe_aceh_darussalam">Naggroe Aceh Darussalam</string>
    <string name="sumatra_barat">Sumatra Barat</string>
    <string name="riau">Riau</string>
    <string name="kepulauan_riau">Kepulauan Riau</string>
    <string name="jambi">Jambi</string>
    <string name="sumatra_selatan">Sumatra Selatan</string>
    <string name="bangka_belitung">Bangka Belitung</string>
    <string name="bengkulu">Bengkulu</string>
    <string name="lampung">Lampung</string>
    <string name="kalimantan_utara">Kalimantan Utara</string>
    <string name="kalimantan_barat">Kalimantan Barat</string>
    <string name="kalimantan_tengah">Kalimantan Tengah</string>
    <string name="kalimantan_selatan">Kalimantan Selatan</string>
    <string name="kalimantan_timur">Kalimantan Timur</string>
    <string name="maluku">Maluku</string>
    <string name="maluku_utara">Maluku Utara</string>
    <string name="papua">Papua</string>
    <string name="papua_selatan">Papua Selatan</string>
    <string name="papua_barat">Papua Barat</string>
    <string name="papua_tengah">Papua Tengah</string>
    <string name="papua_pegunungan">Papua Pegunungan</string>
    <string name="sumatra_utara">Sumatra Utara</string>
    <string name="please_wait">Please Wait</string>
    <string name="province">province</string>
</resources>