<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_degree"
            android:layout_width="351dp"
            android:layout_height="157dp"
            android:background="@drawable/bg_bluepastel"
            android:elevation="2dp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071">


            <ImageView
                android:layout_width="142dp"
                android:layout_height="130dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/healt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/covid_19"
                android:textColor="@color/blue3"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="143dp"
                android:layout_height="38dp"
                android:layout_marginStart="15dp"
                android:text="@string/prottect_your_self_and_your_fammily_from_covid"
                android:textColor="@color/blue3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_details"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_degree">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerProvinsi"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/ic_rounded_line"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_spinner"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <LinearLayout
                android:id="@+id/view_details_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerProvinsi">

                <LinearLayout
                    android:id="@+id/view_kasus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bd_detail2"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kasus"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_kasus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumlah"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_sembuh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_detail3"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sembuh"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_sembuh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumlah"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_details_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/view_details_one">


                <LinearLayout
                    android:id="@+id/view_meninggal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_detail4"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meninggal"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_meninggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumlah"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_dirawat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_detail"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/di_rawat"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_dirawat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumlah"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/connection_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view_details_two"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="357dp"
            android:layout_height="174dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_bluepastel"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_details">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="142dp"
                android:layout_height="130dp"
                android:src="@drawable/safety"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/how"
                android:layout_width="151dp"
                android:layout_height="62dp"
                android:text="@string/how_to_protect_yourself_from_covid"
                android:textColor="@color/blue3"
                android:textSize="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.252" />

            <Button
                android:id="@+id/btn_prevent"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif"
                android:text="@string/check_it"
                android:textColor="@color/blue3"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/how"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.865" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>